# sisal

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  makefile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
experiments/hyperspectral/: model_salient_beta_3.pth  model_salient_beta_4.pth  salient_data.ipynb  salient_data.py
experiments/kidney_data/: kidney_data.ipynb  load_data.py  model_kidney.pth  model_kidney1.pth  polygons_sisal.json
experiments/synthetic_data/: model_synthetic.pth  synthetic_data.ipynb  synthetic_data.py  synthetic_data2.py
experiments/synthetic_data/runs/fashion_trainer_13022025_184822/: events.out.tfevents.1739468902.Paul-Louiss-MacBook-Pro.local.23572.0
experiments/synthetic_data/runs/fashion_trainer_13022025_184909/: events.out.tfevents.1739468949.Paul-Louiss-MacBook-Pro.local.23572.1
experiments/synthetic_data/runs/fashion_trainer_13022025_184942/: events.out.tfevents.1739468982.Paul-Louiss-MacBook-Pro.local.23572.2
experiments/synthetic_data/runs/fashion_trainer_13022025_185035/: events.out.tfevents.1739469035.Paul-Louiss-MacBook-Pro.local.23572.3
experiments/synthetic_data/runs/fashion_trainer_13022025_185201/: events.out.tfevents.1739469121.Paul-Louiss-MacBook-Pro.local.23774.0
experiments/synthetic_data/runs/fashion_trainer_13022025_185257/: events.out.tfevents.1739469177.Paul-Louiss-MacBook-Pro.local.23830.0
experiments/synthetic_data/runs/fashion_trainer_13022025_185404/: events.out.tfevents.1739469244.Paul-Louiss-MacBook-Pro.local.23830.1
experiments/synthetic_data/runs/fashion_trainer_13022025_185536/: events.out.tfevents.1739469336.Paul-Louiss-MacBook-Pro.local.23830.2
sisal/: pyvenv.cfg
src/sisal/: __init__.py  kernel_adapted.py  model.py  plot.py  solver.py  utils.py
tests/: test_model.py  test_sisal.py  test_solver.py  test_utils.py
